--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header {
 }
 
 .logo {
-    font-size: var(--SMALL-H1-FONT-SIZE);
+    font-size: var(--LITTLE-H1-FONT-SIZE);
     color: rgba(255, 255, 255, 0.671);
 }
 
@@ -239,26 +239,70 @@ article {
     font-size: var(--LARGE-P-FONT-SIZE);
     font-style: italic;
 }
-footer {
-    background-color: rgb(19, 17, 17);
-    width: 100%;
-    height: 50px;
+
+.contact {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: var(--LARGE-SPACING);
+    padding-top: var(--LARGE-SPACING);
+}
+
+.block-1 {
+    display: flex;
+    flex-direction: column;
+    gap: var(--SMALL-SPACING);
+    flex: 50%;
     color: #fff;
     padding: var(--SMALL-SPACING);
+    height: auto;
+}
+
+.block-1 h6 {
+    font-size: var(--LITTLE-P-FONT-SIZE);
+}
+
+.block-1 H1 {
+    font-size: var(--MEDIUM-H1-FONT-SIZE);
+}
+
+.block-1 p {
+    line-height: var(--MEDIUM-SPACING);
+    font-size: var(--MEDIUM-P-FONT-SIZE);
+}
+
+.block-2 {
+    flex: 50%;
+    padding: var(--SMALL-SPACING);
+    height: auto;
+}
+
+.block-2 form {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: var(--LARGE-SPACING);
+    flex-direction: column;
+    gap: var(--SMALL-SPACING);
 }
 
-footer p, footer p a {
-    font-size: var(--SMALL-P-FONT-SIZE);
-}
-
-footer p a {
-    text-decoration: underline;
+input, textarea {
+    border: 2px solid rgb(218, 217, 217);
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    background: none;
+    padding: var(--LITTLE-SPACING);
     color: #fff;
+    font-size: var(--MEDIUM-P-FONT-SIZE);
+    outline: none;
+}
+
+#button {
+    width: 100px;
+    padding: var(--LITTLE-SPACING);
+    background: none;
+    color: rgb(204, 133, 0);
     font-family: inherit;
+    border: 1px solid rgb(204, 133, 0);
+    border-radius: 2rem;
 }
 
 @media screen and (min-width: 200px){
@@ -326,11 +370,19 @@ footer p a {
     }
 
     .final-info p {
-        font-size: var(--LARGE-P-FONT-SIZE);
+        font-size: var(--MEDIUM-P-FONT-SIZE);
     }
 
-    footer p, footer p a {
-        font-size: var(--SMALL-P-FONT-SIZE);
+    .contact {
+        flex-direction: column;
+    }
+
+    input, textarea {
+        max-width: 210px;
+    }
+
+    .block-1, .block-2 {
+        flex: 100%;
     }
 }
 
@@ -357,6 +409,10 @@ footer p a {
     footer p, footer p a {
         font-size: var(--SMALL-P-FONT-SIZE);
     }
+
+    input, textarea {
+        max-width: 350px;
+    }
 }
 
 @media screen and (min-width: 768px){
@@ -374,6 +430,10 @@ footer p a {
     .column {
         flex: calc(100%/3);
         max-width: calc(100%/3);
+    }
+
+    input, textarea {
+        max-width: 450px;
     }
 }
 
@@ -398,6 +458,15 @@ footer p a {
     .final-info {
         flex-direction: row;
         align-items: flex-end;
+    }
+
+    .contact {
+        flex-direction: row;
+    }
+
+
+    input, textarea {
+        max-width: 100%;
     }
 }
 
